prova github pages

--- a/evt-viewer/app/config/config.json
+++ b/evt-viewer/app/config/config.json
@@ -1,5 +1,5 @@
 {
-    "indexTitle":"Epistolario Canneti Fiacchi",
+    "indexTitle":"Epistolario Canneti Fiacchi - Beta",
     "webSite":"",
     "logoUrl":"",
     "dataUrl":"data/epistolario-canneti-fiacchi.xml",
