colori differenti ma aggiustare selettore

--- a/evt-viewer/app/config/config.json
+++ b/evt-viewer/app/config/config.json
@@ -105,7 +105,7 @@
                 },
                 {
                     "tagName":"bibl",
-                    "label":"Manoscritti",
+                    "label":"Opere",
                     "available":true,
                     "color":"rgb(255,204,249)"
                 },
