parsing project info same as letter one
+ no more msdesc button
+ filedesc function
+ respdesc parsing

--- a/evt-viewer/app/config/config.json
+++ b/evt-viewer/app/config/config.json
@@ -70,7 +70,7 @@
                 "value":"interpretative",
                 "label":"Interpretative",
                 "title":"Interpretative edition",
-                "visible":true
+                "visible":false
             }
         ],
     "showDocumentSelector": true,
