--- a/evt-viewer/app/config/config.json
+++ b/evt-viewer/app/config/config.json
@@ -1,8 +1,8 @@
 {
-    "indexTitle":"Epistolario Canneti Fiacchi - Beta",
+    "indexTitle":"Edizione Digitale Carteggio Canneti Fiacchi",
     "webSite":"",
     "logoUrl":"",
-    "dataUrl":"data/epistolario-canneti-fiacchi.xml",
+    "dataUrl":"data/carteggio-canneti-fiacchi.xml",
     "sourcesUrl":"",
     "analoguesUrl":"",
     "sourcesTextsUrl":"",
@@ -12,7 +12,7 @@
             "label":"READING_TEXT",
             "icon":"reading-txt",
             "viewMode":"readingTxt",
-            "visible":true
+            "visible":false
         },
         {
             "label":"MULTIPLE_RECENSIONS",
