--- a/evt-viewer/app/.htaccess
+++ b/evt-viewer/app/.htaccess
@@ -276,12 +276,14 @@ AddDefaultCharset utf-8
 # read: http://html5rocks.com/en/tutorials/security/content-security-policy (or
 # see the specification: http://w3.org/TR/CSP).
 
-# <IfModule mod_headers.c>
-#    Header set Content-Security-Policy "script-src 'self'; object-src 'self'"
-#    <FilesMatch "\.(appcache|crx|css|eot|gif|htc|ico|jpe?g|js|m4a|m4v|manifest|mp4|oex|oga|ogg|ogv|otf|pdf|png|safariextz|svg|svgz|ttf|vcf|webapp|webm|webp|woff|xml|xpi)$">
-#        Header unset Content-Security-Policy
-#    </FilesMatch>
-# </IfModule>
+<IfModule mod_headers.c>
+    Header set Content-Security-Policy "default-src 'self'; script-src 'self'; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self';"
+    # The FilesMatch block below might be too restrictive depending on your setup.
+    # You might need to adjust or remove it based on your specific needs.
+    # <FilesMatch "\.(appcache|crx|css|eot|gif|htc|ico|jpe?g|js|m4a|m4v|manifest|mp4|oex|oga|ogg|ogv|otf|pdf|png|safariextz|svg|svgz|ttf|vcf|webapp|webm|webp|woff|xml|xpi)$">
+    #     Header unset Content-Security-Policy
+    # </FilesMatch>
+</IfModule>
 
 # ------------------------------------------------------------------------------
 # | File access                                                                |
