pagination for entities list and other stuff
Pagination for named entities lists. Update to search button labels to use translation keys. Minor stuff: fixes to method call in select.directive.js, minor style adjustments for scrollable lists. Txt to txt mode deactivated.

--- a/evt-viewer/app/config/config.json
+++ b/evt-viewer/app/config/config.json
@@ -30,7 +30,7 @@
             "label":"TEXT_TEXT",
             "icon":"mode-txtTxt",
             "viewMode":"txtTxt",
-            "visible":true
+            "visible":false
         },
         {
             "label":"COLLATION",
