--- a/evt-viewer/package.json
+++ b/evt-viewer/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "devDependencies": {
     "@babel/core": "7.4.5",
-    "angular": "1.3.15",
-    "angular-mocks": "^1.3.0",
+    "angular": "^1.3.15",
+    "angular-mocks": "^1.8.3",
     "angular-scenario": "^1.3.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
