--- a/evt-viewer/package.json
+++ b/evt-viewer/package.json
@@ -50,7 +50,7 @@
     "start": "webpack-dev-server --config webpack.config.js --open --display-error-details"
   },
   "dependencies": {
-    "angular-animate": "1.3.0",
+    "angular-animate": "^1.3.15",
     "angular-cookies": "1.3.0",
     "angular-messages": "1.3.0",
     "angular-pretty-xml": "^0.1.1",
