update to cdc IIIF URLs + ui improvements

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ dist/*
 dist/
 *.backup
 **/*.xml.backup
+evt-viewer/app/data/busta-10/missing-iiif-images-report.md
+evt-viewer/app/data/busta-10/url-sources-report.md
